manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
